FIX default choice, FIX fileupload not showing image dimension after ajax request, FIX tests

--- a/app/assets/stylesheets/binda/components/fileupload.scss
+++ b/app/assets/stylesheets/binda/components/fileupload.scss
@@ -127,3 +127,7 @@
   opacity: 0;
   width: 0; // Odd but needed, otherwise it occupies few transparent pixels...
 }
+
+.standard-form--video .fileupload--dimension {
+  display: none;
+}
